--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           style="font-size:40px; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"
           class="hidden lg:inline-block"><strong>Student Chapter</strong></h2><br>
         <p style="font-size:17px;" class="text-justify" mb-8 leading-relaxed"><strong>GFG-MRIIRS-FCA</strong> are
-          community froups for college & university students for creating a technical environment amongst them. By
+          community groups for college & university students for creating a technical environment amongst them. By
           Joining <strong>GFG-MRIIRS-FCA</strong>, students grow their knowledge in a peer-to-peer learning environment
           & build solutions for local businesses & their community.</p>
         <div class="flex justify-center">
