--- a/careers.html
+++ b/careers.html
@@ -54,7 +54,7 @@
               <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">STEP 1</h2>
               <p class="leading-relaxed">Send your Resume/CV to us.</p>
               <a href="mailto: geeksforgeeks.fca@gmail.com?subject = Resume">
-                <p class="leading-relaxed">Email ID: <strong>geeksforgeeks.fca@gmail.com</strong></p>
+                <p class="leading-relaxed">Email ID: <strong>chairperson@geeksforgeeksmriirs.tech</strong></p>
               </a>
             </div>
           </div>
