--- a/careers.html
+++ b/careers.html
@@ -53,7 +53,7 @@
             <div class="flex-grow pl-4">
               <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">STEP 1</h2>
               <p class="leading-relaxed">Send your Resume/CV to us.</p>
-              <a href="mailto: geeksforgeeks.fca@gmail.com?subject = Resume">
+              <a href="mailto: chairperson@geeksforgeeksmriirs.tech?subject = Resume">
                 <p class="leading-relaxed">Email ID: <strong>chairperson@geeksforgeeksmriirs.tech</strong></p>
               </a>
             </div>
