--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
         <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Yes, I would like GFG-MRIIRS-FCA to contact me based on
           the information provided above.
           Read our Privacy Policy for details on how your information may be used.
-          I am aware that I can raise the same query to <strong>geeksforgeeks.fca@gmail.com</strong></p>
+          I am aware that I can raise the same query to <strong>helpdesk@geeksforgeeksmriirs.tech</strong></p>
       </div>
       <div class="lg:w-1/2 md:w-2/3 mx-auto">
         <div class="flex flex-wrap -m-2">
