--- a/careers.html
+++ b/careers.html
@@ -52,7 +52,7 @@
             </div>
             <div class="flex-grow pl-4">
               <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">STEP 1</h2>
-              <p class="leading-relaxed">Send your Resume/CV to us.</p>
+              <p class="leading-relaxed">Fill Google Form below & Send your Resume/CV to us.</p>
               <a href="mailto: chairperson@geeksforgeeksmriirs.tech?subject = Resume">
                 <p class="leading-relaxed">Email ID: <strong>chairperson@geeksforgeeksmriirs.tech</strong></p>
               </a>
@@ -144,6 +144,8 @@
               skills.</p>
             <p class="leading-relaxed">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;3. Need to know HTML, CSS, Basics
               of C++, JavaScript.</p>
+              <a href="https://forms.gle/7fTDU43h2X16GpDe7" target="_blank">
+              <p class="leading-relaxed">Link to apply: <strong>https://tiny.one/gfgcareers</strong></p></a>
             <!-- <a class="text-indigo-400 inline-flex items-center mt-4">Learn More
               <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M5 12h14"></path>
@@ -164,6 +166,8 @@
               skills.</p>
             <p class="leading-relaxed">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;3. Organized one or more event in
               college.</p>
+              <a href="https://forms.gle/7fTDU43h2X16GpDe7" target="_blank">
+                <p class="leading-relaxed">Link to apply: <strong>https://tiny.one/gfgcareers</strong></p></a>
             <!-- <a class="text-indigo-400 inline-flex items-center mt-4">Learn More
               <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M5 12h14"></path>
