--- a/events.html
+++ b/events.html
@@ -30,18 +30,35 @@
         <a href="events.html" class="mr-5 hover:text-white">Events</a>
         <a href="careers.html" class="mr-5 hover:text-white">Careers</a>
         <a href="contact.html" class="mr-5 hover:text-white">Contact Us</a>
-
       </nav>
     </div>
   </header>
+
   <section class="text-gray-400 bg-gray-900 body-font">
-    <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-      <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="soon.gif">
+    <div class="container mx-auto flex px-5 py-23 items-center justify-center flex-col">
+      <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="poster.jpeg"  onclick="enlargeImg()"
+      id="img1">
+      <button onclick="resetImg()">Reset
+      <div class="text-center lg:w-2/3 w-full">
+        <div class="flex justify-center">
+          <script>
+            img = document.getElementById("img1");
+            // Function to set image dimensions
+            function enlargeImg() {
+                img.style.width = "60%";
+                img.style.height = "auto";
+                img.style.transition = "width 0.5s ease";
+            }
+            // Function to reset image dimensions
+            function resetImg() {
+                img.style.width = "40%";
+                img.style.height = "auto";
+                img.style.transition = "width 0.5s ease";
+            }
+        </script>
+        </div>
+      </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
     <br>
